# mdatp-devicecontrol

./: .gitignore  README.md  WindowsDefender.admx  dc_group_rules.csv  dc_groups.csv  dc_rules.csv  dcutil.md  issue.md
.devcontainer/: devcontainer.json
Getting Started/: allow_authorized_usb_rules.md  allow_different_access_to_different_rules.md  allow_different_access_to_different_users_rules.md  deny_all_rules.md  readme.md  restrict_files_and_capture_file_evidece_rules.md  scenarios.json
Printer Protection Samples/: Allow Authorized USB Printer.md  Allow PDF_XPS Printer.md  (+11 more)
python/: README.md  convert_dc_policy.py  dcdoc.py  dcgraph.py  dcintune.py  dcutil.py  devicecontrol.py  graph.py  logging.conf  mdedevicecontrol-main.yaml  mdedevicecontrol.conf  package_schema.json  pyproject.toml  requirements.txt  test_dc_doc.py
python/src/mdedevicecontrol/: __init__.py  convert_dc_policy.py  dcdoc.py  dcgraph.py  dcintune.py  device_management_reusable_policy_setting_item_request_builder_patch.py  devicecontrol.py  upgrade_dc_policy.py
python/src/mdedevicecontrol/templates/: dcutil.j2  groups.j2  intune_custom_settings_row.j2  intune_entry.j2  intune_rule.j2  kql  reusable_setting_property.j2  reusable_settings.j2  windows_device_property.j2  windows_rule.j2
python/templates/: dcutil.j2  description.j2  gpo.j2  mac_groups.j2  mac_policy.j2  readme.j2  reusable_setting_property.j2  settings.j2  windows_rule.j2
python/tests/: __init__.py  test_dcdoc.py  test_dcgraph.py  test_dcintune.py  test_dcupgrade.py  test_devicecontrol.py  test_logging.py  test_mac.py
(+503 files in other folders)
